--- a/templates/index.html
+++ b/templates/index.html
@@ -1,51 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MINISO Return Form</title>
+    <title>Amazon Return Form</title>
 </head>
 <body>
-    <h2>Amazon Returns Form</h2>
-    <form method="POST" action="/" enctype="application/x-www-form-urlencoded">
-        <label>Order ID:</label><br>
-        <input type="text" name="order_id" required><br><br>
-
-        <label>Barcode:</label><br>
-        <input type="text" name="barcode"><br><br>
-
-        <label>SKU:</label><br>
-        <input type="text" name="sku"><br><br>
-
-        <label>Condition:</label><br>
-        <select name="condition" required>
-            <option value="New">New</option>
-            <option value="Used">Used</option>
-            <option value="Damaged">Damaged</option>
-        </select><br><br>
-
-        <label>Damage Description (if Damaged):</label><br>
-        <input type="text" name="damage_desc"><br><br>
-
-        <label>Return Reason:</label><br>
-        <input type="text" name="return_reason"><br><br>
-
-        <label>Order Date:</label><br>
-        <input type="date" name="order_date"><br><br>
-
-        <label>Price:</label><br>
-        <input type="number" step="0.01" name="price"><br><br>
-
-        <label>LPN:</label><br>
-        <input type="text" name="lpn"><br><br>
-
-        <label>Box Label:</label><br>
-        <input type="text" name="box_label"><br><br>
-
-        <label>Warehouse:</label><br>
-        <input type="text" name="warehouse"><br><br>
-
-        <label>Staff:</label><br>
-        <input type="text" name="staff"><br><br>
-
+    <h2>Amazon Return Form</h2>
+    <form method="POST" action="/">
+        <label>Order ID:</label><input type="text" name="order_id" required><br><br>
+        <label>Barcode:</label><input type="text" name="barcode"><br><br>
+        <label>SKU:</label><input type="text" name="sku"><br><br>
+        <label>Condition:</label><input type="text" name="condition"><br><br>
+        <label>Damage Description:</label><input type="text" name="damage_desc"><br><br>
+        <label>Return Reason:</label><input type="text" name="return_reason"><br><br>
+        <label>Order Date:</label><input type="date" name="order_date"><br><br>
+        <label>Price:</label><input type="number" name="price"><br><br>
+        <label>LPN:</label><input type="text" name="lpn"><br><br>
+        <label>Box Label:</label><input type="text" name="box_label"><br><br>
+        <label>Warehouse:</label><input type="text" name="warehouse"><br><br>
+        <label>Staff:</label><input type="text" name="staff"><br><br>
         <input type="submit" value="Submit">
     </form>
 </body>
